# ecosys

./: .gitignore  CMakeLists.txt
src/: component.cpp  entity.cpp  entity_manager.cpp  systems_runner.cpp
src/ecosys/: component.hpp  entity.hpp  entity_manager.hpp  system.hpp  systems_runner.hpp
tests/: entity_manager_tests.cpp  entity_tests.cpp  test_components.hpp
